removing static active class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</ul>
 			</nav>
 		</header>
-		<h1 class="primary-heading">You Are Here</h1>
+		<h1 class="primary-heading">Home</h1>
 		<main class="main">
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aut quas illo vitae est maxime quam. Modi officiis beatae ipsa laborum enim vero recusandae repellat, sint, illum obcaecati sunt non ut tenetur consectetur! Nisi suscipit, rerum dolores reiciendis inventore non asperiores rem, ut dolor consectetur veritatis, fugit pariatur nam laboriosam ipsam perspiciatis in enim quia architecto assumenda illo dolorem aut. Minima nisi non voluptatibus voluptatum vitae recusandae accusantium doloribus quas, quam cum beatae, porro vel magnam nobis amet facilis omnis nihil consectetur expedita libero consequatur modi ducimus fugit. Autem itaque at illo consequuntur hic repellat, necessitatibus qui dolor laboriosam?</p>
 		</main>
