--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,11 @@
 		<header class="header">
 			<nav class="navigation">
 				<ul>
-					<li><a class="nav-link" href="./index.html">Home</a></li>
-					<li><a class="nav-link" href="./about.html">About</a></li>
-					<li><a class="nav-link" href="./portfolio.html">Portfolio</a></li>
-					<li><a class="nav-link" href="./blog.html">Blog</a></li>
-					<li><a class="nav-link" href="./contact.html">Contact</a></li>
+					<li><a class="nav-link" href="/">Home</a></li>
+					<li><a class="nav-link" href="about.html">About</a></li>
+					<li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+					<li><a class="nav-link" href="blog.html">Blog</a></li>
+					<li><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 		</header>
