--- a/index.html
+++ b/index.html
@@ -24,7 +24,42 @@
 		</header>
 		<h1 class="primary-heading">Home</h1>
 		<main class="main">
+			<h2 class="h2">Main Header</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aut quas illo vitae est maxime quam. Modi officiis beatae ipsa laborum enim vero recusandae repellat, sint, illum obcaecati sunt non ut tenetur consectetur! Nisi suscipit, rerum dolores reiciendis inventore non asperiores rem, ut dolor consectetur veritatis, fugit pariatur nam laboriosam ipsam perspiciatis in enim quia architecto assumenda illo dolorem aut. Minima nisi non voluptatibus voluptatum vitae recusandae accusantium doloribus quas, quam cum beatae, porro vel magnam nobis amet facilis omnis nihil consectetur expedita libero consequatur modi ducimus fugit. Autem itaque at illo consequuntur hic repellat, necessitatibus qui dolor laboriosam?</p>
+
+			<section class="image-section">
+				<h3 class="h3">Section Header - Images</h3>
+				<figure class="image-container">
+					<img src="https://picsum.photos/1042/768" alt="" />
+					<figcaption>Empty alt attribute to signal to screenreader to skip this image.</figcaption>
+				</figure>
+				<figure class="image-container">
+					<img src="https://picsum.photos/1042/768" alt="Random image from Lorem Picsum" />
+					<figcaption>Random image used as an example of images and figcaptions.</figcaption>
+				</figure>
+				<figure class="image-container">
+					<img src="https://picsum.photos/1042/768" />
+					<figcaption>This image has no alt="" attribute and text. This is not accessible.</figcaption>
+				</figure>
+			</section>
+			<section class="form-section">
+				<h2 class="h2">Section Header - Form</h2>
+				<form action="" class="form">
+					<label class="access-hidden" for="first_name">First Name</label>
+					<input type="text" id="first_name" name="first_name" placeholder="First Name" />
+
+					<label class="access-hidden" for="last_name">Last Name</label>
+					<input type="text" id="last_name" name="last_name" placeholder="Last Name" />
+
+					<label class="access-hidden" for="email">Email</label>
+					<input type="text" id="email" name="email" placeholder="Email" />
+
+					<button class="submit">
+						<span class="access-hidden">Submit</span>
+						<svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><path fill="none" stroke="#222" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M268 112l144 144-144 144M392 256H100" /></svg>
+					</button>
+				</form>
+			</section>
 		</main>
 		<footer class="footer">
 			<p>
